# opc-scada-server

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  config.c  config.h  init.c  init.h  main.c  math_model.c  math_model.h  opcuaSettings.c  opcuaSettings.h  types.h
